# NeuroAegis

./: .env.example  .gitignore  CONTRACT.md  README.md  compare_denoise.py  docker-compose.yml  extracted_notebook.py  neuroaegis-v1.ipynb  package-lock.json  package.json  print_features.py  print_mismatches.py  test_parity.py  test_parity2.py  test_parity3.py  test_parity_denoised.py  test_parity_final.py  test_parity_final_11500.py  test_parity_final_metrics.py  test_parity_metrics.py
apps/api/: Dockerfile  README.md  pyproject.toml  requirements.txt  test_patients.py
apps/api/app/: main.py
apps/api/app/api/v1/: health.py  jobs.py  model_info.py  models_api.py  patients.py  predict.py  router.py
apps/api/app/api/v2/: predict.py  router.py
apps/api/app/core/: config.py  logging.py
apps/api/app/db/: database.py  models.py
apps/api/app/schemas/: eeg.py  health.py  metrics.py  patient.py  prediction.py
apps/api/app/services/: explainer.py  feature_selection.py  job_service.py  model_service.py  preprocessing.py
apps/api/app/services/dataset_detection/: detector.py  metadata.py  rules.py  validator.py
apps/api/app/services/pipelines/bonn/: feature_extraction.py  (+1 more)
apps/api/app/services/prediction/: base_predictor.py  bonn_predictor.py  chbmit_predictor.py  prediction_router.py
apps/api/config/: models.yaml
apps/api/models/bonn/: metadata.json
apps/api/models/chbmit/: metadata.json  xgboost_baseline.pkl
apps/api/models/chbmit/model/: feature_names.json  lightgbm_model.pkl  threshold.json
apps/api/tests/: test_dataset_detection.py  test_parity.py
(+151 files in other folders)
