[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "neuroaegis-api"
version = "0.1.0"
description = "NeuroAegis ML Inference API"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "pydantic-settings",
    "python-multipart",
    "numpy",
    "pandas",
    "scipy",
    "lightgbm",
    "shap",
    "joblib",
    "PyWavelets",
    "mne",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
